[package]
name = "kvs"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
failure = "0.1.7"
serde_json = "1.0.48"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
