[package]
name = "kvs"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
failure = "0.1.7"
serde_json = "1.0.48"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
sled = "0.31.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.1"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "kvs_benchmark"
harness = false